@@ -1,5 +1,7 @@
 2008-06-20  Andreas Kirschbaum
 
+	* Move default key bindings to .skin files.
+
 	* Unbinding a key reactivates the default key binding.
 
 	* Implement bind -e.
